# agentbridge-onebot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml
deploy/: qqbridge.service.example
docs/: architecture.md  deployment.md
hermes_skill/: README.md  SKILL.md
hermes_skill/scripts/: qqbridge.py
qqbridge/: __main__.py  agent_output.py  app.py  capabilities.py  clients.py  commands.py  message_store.py  models.py  prompts.py  router.py  settings.py  skill_api.py  state.py  text.py
tests/: test_agent_output.py  test_models.py  test_routing.py  test_skill_api.py  test_text.py
